* Make /etc/default/nfs-common option NEED_GSSD configurable with the UCRV nfs/common/gssd, which defaults to yes (Bug #21556)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45555 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-nfs/debian/changelog
+++ b/services/univention-nfs/debian/changelog
@@ -1,3 +1,10 @@
+univention-nfs (6.0.2-1) unstable; urgency=low
+
+  * Make /etc/default/nfs-common option NEED_GSSD configurable with the UCRV
+    nfs/common/gssd, which defaults to yes (Bug #21556)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 24 Oct 2013 11:34:03 +0200
+
 univention-nfs (6.0.1-5) unstable; urgency=low
 
   * Activate NFSv4 by default (Bug #21556) 
