Bug #32554: added missing files
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45557 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.154-1) unstable; urgency=low
+
+  * Bug #32554: added missing files
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Oct 2013 12:10:22 +0200
+
 ucs-test (4.0.153-1) unstable; urgency=low
 
   * Bug #32554: fixed traceback in udm_extensions.py
