Bug #32554: use udm-test wrapper in udm_extensions.py
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45558 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,6 +1,7 @@
 ucs-test (4.0.154-1) unstable; urgency=low
 
   * Bug #32554: added missing files
+  * Bug #32554: use udm-test wrapper in udm_extensions.py
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 24 Oct 2013 12:10:22 +0200
 
