--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.25-1) unstable; urgency=low
+
+  * Only get a LDAP-Connection if something needs to be marked active
+    (Bug #32392)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Oct 2013 12:39:52 +0200
+
 univention-lib (3.0.24-1) unstable; urgency=low
 
   * Modify share directory permissions, owner and group if it is new or
