* Bug #32218: background color to default button
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45564 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.126-1) unstable; urgency=low
+
+  * Bug #32218: background color to default button
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Oct 2013 12:40:43 +0200
+
 univention-management-console-frontend (3.0.125-1) unstable; urgency=low
 
   * Bug #30004: make sure that initial notifications are shown with the red
