* Only set call mark_active on the DC master, avoiding unnecessary   LDAP connections (Bug #32392)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45565 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-4) unstable; urgency=low
+
+  * Only set call mark_active on the DC master, avoiding unnecessary
+    LDAP connections (Bug #32392)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Oct 2013 12:43:58 +0200
+
 univention-ldap (10.0.17-3) unstable; urgency=low
 
   * Revert last change (Bug #32411)
