--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.127-1) unstable; urgency=low
+
+  * Bug #32218: adjusted buttons for Safari on iOS
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Oct 2013 12:55:15 +0200
+
 univention-management-console-frontend (3.0.126-1) unstable; urgency=low
 
   * Bug #32218: background color to default button
