univention-apache (6.0.12-8) unstable; urgency=low
  * adapted univention-apache.postinst to not fail when unsetting legacy UCRVs
    which contain quotes in there values (Bug #32678)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45567 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (6.0.12-8) unstable; urgency=low
+
+  * adapted univention-apache.postinst to not fail when unsetting legacy UCRVs
+    which contain quotes in there values (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 24 Oct 2013 13:34:07 +0200
+
 univention-apache (6.0.12-7) unstable; urgency=low
 
   * when updating umc/server/languages UCRVs, set/unset all at once
