* Bug #26418: fix memory leaks in Grid * Bug #26418: only select one row
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45569 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.128-1) unstable; urgency=low
+
+  * Bug #26418: fix memory leaks in Grid
+  * Bug #26418: only select one row
+
+ -- Florian Best <best@univention.de>  Thu, 24 Oct 2013 13:57:01 +0200
+
 univention-management-console-frontend (3.0.127-1) unstable; urgency=low
 
   * Bug #32218: adjusted buttons for Safari on iOS
