univention-management-console-frontend (3.0.129-1) unstable; urgency=low
  * use new languages.json file for UMC i18n
  * remove old languages.json file when updating from a version below
    3.0.129-1
  (Bug #32678)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45575 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-frontend (3.0.129-1) unstable; urgency=low
+
+  * use new languages.json file for UMC i18n
+  * remove old languages.json file when updating from a version below
+    3.0.129-1
+  (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 24 Oct 2013 17:29:55 +0200
+
 univention-management-console-frontend (3.0.128-1) unstable; urgency=low
 
   * Bug #26418: fix memory leaks in Grid
