* Fix ldapmodify call (Bug #31624)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45577 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (7.0.10-4) unstable; urgency=low
+
+  * Fix ldapmodify call (Bug #31624)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 24 Oct 2013 19:12:30 +0200
+
 univention-printserver (7.0.10-3) unstable; urgency=low
 
   * Also remove univentionPrinterUseClientDriver=0 (Bug #31624)
