* Consider UCR variable rename from   connector/s4/mapping/group/synclocal to .../grouptype (Bug #29486)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45578 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.29-1) unstable; urgency=low
+
+  * Consider UCR variable rename from
+    connector/s4/mapping/group/synclocal to .../grouptype (Bug #29486)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 24 Oct 2013 20:14:36 +0200
+
 univention-s4-connector (8.0.28-1) unstable; urgency=low
 
   * Extend group ignorelist on upgrade (Bug #29000)
