* Update groupType change restrictions (Bug #32767)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45579 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.72-1) unstable; urgency=low
+
+  * Update groupType change restrictions (Bug #32767)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 24 Oct 2013 22:03:13 +0200
+
 univention-directory-manager-modules (9.0.71-1) unstable; urgency=low
 
   * More improvements to share module texts and layout (Bug #32882) 
