--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.60-1) unstable; urgency=low
+
+  * Bug #32381: fix traceback when deleting a object which is selected in the
+  	tree
+
+ -- Florian Best <best@univention.de>  Fri, 25 Oct 2013 08:44:13 +0200
+
 univention-management-console-module-udm (4.0.59-1) unstable; urgency=low
 
   * Bug #32389: add umcPopUp CSS class
