--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.30-1) unstable; urgency=low
+
+  * Fixed a traceback if no groupType is set (Bug #29486)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 25 Oct 2013 11:11:06 +0200
+
 univention-s4-connector (8.0.29-1) unstable; urgency=low
 
   * Consider UCR variable rename from
