univention-nagios (7.0.5-2) unstable; urgency=low
  * remove unjoin script in postinst (Bug #32453)


univention-mail-postfix (8.0.8-1) unstable; urgency=low

  * remove unjoin script in postinst
  * only remove mail domains in unjoin when SMTP service is fully remove
    from the domain
  (Bug #32454)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45588 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,12 @@
+univention-mail-postfix (8.0.8-1) unstable; urgency=low
+
+  * remove unjoin script in postinst
+  * only remove mail domains in unjoin when SMTP service is fully remove
+    from the domain
+  (Bug #32454)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 25 Oct 2013 10:16:17 +0200
+
 univention-mail-postfix (8.0.7-4) unstable; urgency=low
 
   * call unjoin script when removing, not purging (Bug #32454)
