Bug #28191: updated dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45592 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-uefi/debian/changelog
+++ b/base/univention-uefi/debian/changelog
@@ -1,3 +1,9 @@
+univention-uefi (1.0.0-3) unstable; urgency=low
+
+  * Bug #28191: updated dependencies
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 23 Oct 2013 11:01:52 +0200
+
 univention-uefi (1.0.0-2) unstable; urgency=low
 
   * Bug #28191: fixed typo in dependency
