--- a/base/univention-uefi/debian/changelog
+++ b/base/univention-uefi/debian/changelog
@@ -1,3 +1,9 @@
+univention-uefi (1.0.0-4) unstable; urgency=low
+
+  * Bug #28191: updated dependencies
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Fri, 25 Oct 2013 14:01:09 +0200
+
 univention-uefi (1.0.0-3) unstable; urgency=low
 
   * Bug #28191: updated dependencies
