--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.62-1) unstable; urgency=low
+
+  * Bug #32877: add $dn$ to layout properties
+  * Bug #32381: add DHCP / DNS icons to the tree root element
+
+ -- Florian Best <best@univention.de>  Fri, 25 Oct 2013 14:18:13 +0200
+
 univention-management-console-module-udm (4.0.61-1) unstable; urgency=low
 
   * Bug #32381: fix an error which happens when a object is removed concurrent
