--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.131-1) unstable; urgency=low
+
+  * Bug #30004: fixed initial handling of the red notification bubble
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Oct 2013 14:40:41 +0200
+
 univention-management-console-frontend (3.0.130-1) unstable; urgency=low
 
   * Bug #30004: fixed scoping problem with addNotification in umc/widgets/Page
