* Bug #32698: fix buttons when unconfigured * Bug #32698: fix translation file from backend
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45603 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.11-1) unstable; urgency=low
+
+  * Bug #32698: fix buttons when unconfigured
+  * Bug #32698: fix translation file from backend
+
+ -- Florian Best <best@univention.de>  Fri, 25 Oct 2013 14:49:52 +0200
+
 univention-ad-connector (8.0.10-1) unstable; urgency=low
 
   * Bug #30004: fixed scope handling for notifications
