* Bug #30816: fix detection of changes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45606 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.57-1) unstable; urgency=low
+
+  * Bug #30816: fix detection of changes
+
+ -- Florian Best <best@univention.de>  Fri, 25 Oct 2013 15:09:23 +0200
+
 univention-system-setup (7.0.56-1) unstable; urgency=low
 
   * Fix wrong method name (Bug #28670)
