--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.12-1) unstable; urgency=low
+
+  * Bug #32698: fix indentation error
+
+ -- Florian Best <best@univention.de>  Fri, 25 Oct 2013 15:18:53 +0200
+
 univention-ad-connector (8.0.11-1) unstable; urgency=low
 
   * Bug #32698: fix buttons when unconfigured
