univention-management-console-module-appcenter (3.0.48-1) unstable; urgency=low
  * remove obsolete component-errata UCRVs in postinst directly instead of
    using an external script (Bug #30904)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45611 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.48-1) unstable; urgency=low
+
+  * remove obsolete component-errata UCRVs in postinst directly instead of
+    using an external script (Bug #30904)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 25 Oct 2013 15:38:22 +0200
+
 univention-management-console-module-appcenter (3.0.47-1) unstable; urgency=low
 
   * Bug #32930: Also search in LongDescription
