Univention-fetchmail (7.0.0-2) unstable; urgency=low
  * remove fetchmail component UCRVs (Bug #32541)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45614 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-fetchmail/debian/changelog
+++ b/mail/univention-fetchmail/debian/changelog
@@ -1,3 +1,9 @@
+univention-fetchmail (7.0.0-2) unstable; urgency=low
+
+  * remove fetchmail component UCRVs (Bug #32541)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 25 Oct 2013 16:45:53 +0200
+
 univention-fetchmail (7.0.0-1) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
