--- a/mail/univention-fetchmail/debian/changelog
+++ b/mail/univention-fetchmail/debian/changelog
@@ -1,3 +1,9 @@
+univention-fetchmail (7.0.0-3) unstable; urgency=low
+
+  * version bump (Bug #32541)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 25 Oct 2013 17:13:45 +0200
+
 univention-fetchmail (7.0.0-2) unstable; urgency=low
 
   * remove fetchmail component UCRVs (Bug #32541)
