--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.58-1) unstable; urgency=low
+
+  * Enable debugging by default (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 25 Oct 2013 19:00:03 +0200
+
 univention-system-setup (7.0.57-1) unstable; urgency=low
 
   * Bug #30816: fix detection of changes
