Bug #28670: USS: Remove Apache restart
Disable restarting Apache, which doesn't work as the UMC plays dirty
tricks to stay alive.
Currently the restarts only adds a very noticeable delay.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45617 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,6 +1,7 @@
 univention-system-setup (7.0.58-1) unstable; urgency=low
 
   * Enable debugging by default (Bug #28670)
+  * Remove Apache restart.
 
  -- Philipp Hahn <hahn@univention.de>  Fri, 25 Oct 2013 19:00:03 +0200
 
