* 10_ldap/80acl_unregistration_basis: increase the waiting time   (Bug #32392)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45621 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.156-6) unstable; urgency=low
+
+  * 10_ldap/80acl_unregistration_basis: increase the waiting time
+    (Bug #32392)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 26 Oct 2013 20:24:02 +0200
+
 ucs-test (4.0.156-5) unstable; urgency=low
 
   * 10_ldap/70schema_registration_basis: test if the schema file is
