* Bug #31990: fix quoting error in the UCR module
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45623 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.13-1) unstable; urgency=low
+
+  * Bug #31990: fix quoting error in the UCR module
+
+ -- Florian Best <best@univention.de>  Mon, 28 Oct 2013 09:06:38 +0100
+
 univention-ad-connector (8.0.12-1) unstable; urgency=low
 
   * Bug #32698: fix indentation error
