* Bug #32381: fix selected item in superordinate widget after a tree reload
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45625 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.63-1) unstable; urgency=low
+
+  * Bug #32381: fix selected item in superordinate widget after a tree reload
+
+ -- Florian Best <best@univention.de>  Mon, 28 Oct 2013 10:59:44 +0100
+
 univention-management-console-module-udm (4.0.62-1) unstable; urgency=low
 
   * Bug #32877: add $dn$ to layout properties
