univention-management-console-module-udm (4.0.64-1) unstable; urgency=low
  * revised udm module descriptions again (Bug #32022)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45628 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/de.po
+++ b/management/univention-management-console-module-udm/umc/de.po
@@ -36,30 +36,30 @@ msgstr "Konfiguration von Nagios Einstellungen der Domäne"
 msgid "Configuration of domain network settings"
 msgstr "Konfiguration von Netzwerkeinstellungen der Domäne"
 
-msgid "Creation, removal and management directory shares in the domain"
+msgid "Management of directory shares in the domain"
 msgstr ""
-"Erstellen, Löschen und Verwalten von Verzeichnisfreigaben in der Domäne"
+"Verwaltung von Verzeichnisfreigaben in der Domäne"
 
-msgid "Creation, removal and management domain wide policies"
-msgstr "Erstellen, Löschen und Verwalten von domänenweiten Richtlinien"
+msgid "Management domain wide policies"
+msgstr "Verwaltung von domänenweiten Richtlinien"
 
-msgid "Creation, removal and management of computers in the domain"
-msgstr "Erstellen, Löschen und Verwalten von Rechnern in der Domäne"
+msgid "Management of computers in the domain"
+msgstr "Verwaltung von Rechnern in der Domäne"
 
-msgid "Creation, removal and management of domain users"
-msgstr "Erstellen, Löschen und Verwalten von Benutzern in der Domäne"
+msgid "Management of domain users"
+msgstr "Verwaltung von Benutzern in der Domäne"
 
 msgid ""
-"Creation, removal and management of user and computer groups in the domain"
+"Management of user and computer groups in the domain"
 msgstr ""
-"Erstellen, Löschen und Verwalten von Benutzer- und Rechnergruppen in der "
+"Verwaltung von Benutzer- und Rechnergruppen in der "
 "Domäne"
 
 msgid ""
-"Creation, removal and management printer shares and printer share groups in "
+"Management of printer shares and printer share groups in "
 "the domain"
 msgstr ""
-"Erstellen, Löschen und Verwalten von Druckerfreigaben und Gruppen von "
+"Verwaltung von Druckerfreigaben und Gruppen von "
 "Druckerfreigaben in der Domäne"
 
 msgid "DHCP"
