--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.64-1) unstable; urgency=low
+
+  * revised udm module descriptions again (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 28 Oct 2013 11:22:49 +0100
+
 univention-management-console-module-udm (4.0.63-1) unstable; urgency=low
 
   * Bug #32381: fix selected item in superordinate widget after a tree reload
