--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.25-2) unstable; urgency=low
+
+  * Commit schema extensions as well on DC backups (Bug #31801)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Oct 2013 13:02:45 +0100
+
 univention-lib (3.0.25-1) unstable; urgency=low
 
   * Only get a LDAP-Connection if something needs to be marked active
