* Bug #32698: fix possibility to response with content types != application/json
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45631 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.19-1) unstable; urgency=low
+
+  * Bug #32698: fix possibility to response with content types !=
+  	application/json
+
+ -- Florian Best <best@univention.de>  Mon, 28 Oct 2013 13:02:14 +0100
+
 univention-management-console (6.0.18-1) unstable; urgency=low
 
   * Bug #32565: Avoid reloading UDM users module: If handler and syntax are of
