--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.14-1) unstable; urgency=low
+
+  * Bug #32698: serve private keys via UMCP
+
+ -- Florian Best <best@univention.de>  Mon, 28 Oct 2013 13:15:24 +0100
+
 univention-ad-connector (8.0.13-1) unstable; urgency=low
 
   * Bug #31990: fix quoting error in the UCR module
