* Bug #32168: Fix touch events of GalleryPane * Bug #23214: Autovalidate Wizards in private methods that are not overridden
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45633 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (3.0.132-1) unstable; urgency=low
+
+  * Bug #32168: Fix touch events of GalleryPane
+  * Bug #23214: Autovalidate Wizards in private methods that are not
+    overridden
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 28 Oct 2013 14:07:03 +0100
+
 univention-management-console-frontend (3.0.131-1) unstable; urgency=low
 
   * Bug #30004: fixed initial handling of the red notification bubble
