univention-management-console-frontend (3.0.133-1) unstable; urgency=low
  * correctly remove obsolete conffiles (Bug #32678)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45635 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.133-1) unstable; urgency=low
+
+  * correctly remove obsolete conffiles (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 28 Oct 2013 13:56:51 +0100
+
 univention-management-console-frontend (3.0.132-1) unstable; urgency=low
 
   * Bug #32168: Fix touch events of GalleryPane
