--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-s4-connector (8.0.30-1.1) unstable; urgency=low
+
+  * univention-ad-takeover:
+    Add mapping for well known builtin group and foreignSecurityPrincipal
+    (Bug #29486)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Oct 2013 14:44:00 +0100
+
 univention-s4-connector (8.0.30-1) unstable; urgency=low
 
   * Fixed a traceback if no groupType is set (Bug #29486)
