* Bug #32565: Stop UDM cli in postinst: Syntax or handlers may have changed
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45637 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.72-2) unstable; urgency=low
+
+  * Bug #32565: Stop UDM cli in postinst: Syntax or handlers may have changed
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 28 Oct 2013 15:57:24 +0100
+
 univention-directory-manager-modules (9.0.72-1) unstable; urgency=low
 
   * Update groupType change restrictions (Bug #32767)
